# hyperlane-monorepo

rust/: Cargo.toml
rust/hyperlane-cli/: Cargo.toml
